--- a/src/css/style.css
+++ b/src/css/style.css
@@ -100,12 +100,13 @@ p {
 }
 
 button {
-  padding: 0.5em 2em;
+  padding: 0.5em;
   background-color: var(--secondary-color);
   color: white;
-  margin: auto;
+  margin: 0.5rem;
   display: block;
   border: 0;
+  border-radius: 0.375rem;
   font-size: var(--large-font);
   cursor: pointer;
 }
@@ -204,41 +205,60 @@ button {
 }
 
 /* Start cart list card styles */
-.cart-card {
+/* .cart-card {
   display: grid;
   grid-template-columns: 25% auto 15%;
   font-size: var(--small-font);
-  /* max-height: 120px; */
+  max-height: 120px;
   align-items: center;
-}
-
+} 
 .cart-card__image {
   grid-row: 1/3;
   grid-column: 1;
 }
-
-.cart-card p {
-  margin-top: 0;
-}
-
 .cart-card .card__name {
   grid-row: 1;
   grid-column: 2;
 }
-
 .cart-card__color {
   grid-row: 2;
   grid-column: 2;
 }
-
+.cart-card p {
+  margin-top: 0;
+}
 .cart-card__quantity {
   grid-row: 1;
   grid-column: 3;
 }
-
 .cart-card__price {
   grid-row: 2;
   grid-column: 3;
+} */
+
+/* cart card redesign*/
+.cart-card {
+  display: grid;
+  grid-template-areas:
+    "image itemName"
+    "image itemColor"
+    "image table";
+  grid-template-columns: 25% auto;
+  font-size: var(--small-font);
+  align-content: center;
+}
+.cart-card__image {
+  grid-area: image;
+}
+.card__name {
+  grid-area: itemName;
+  margin-top: 0.375rem;
+}
+.cart-card__color {
+  grid-area: itemColor;
+}
+.card__table {
+  grid-area: table;
 }
 
 @media screen and (min-width: 500px) {
@@ -250,14 +270,13 @@ button {
   .mission {
     font-size: 1.2em;
   }
-
-  .cart-card {
-    font-size: inherit;
-    grid-template-columns: 150px auto 15%;
-  }
 }
 
 footer {
   font-size: var(--small-font);
   padding: 1em;
+}
+
+.remove-item {
+  background-color: red;
 }
