`Update relative paths and add header/footer loading functionality`

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -116,6 +116,10 @@ button {
   cursor: pointer;
 }
 
+.card__table button{
+  display: inline-flex;
+}
+
 .divider {
   border-bottom: 2px solid var(--primary-color);
 }
