--- a/src/css/style.css
+++ b/src/css/style.css
@@ -124,6 +124,7 @@ button {
   font-weight: bold;
   margin-top: 1rem;
 }
+
 .divider {
   border-bottom: 2px solid var(--primary-color);
 }
@@ -301,7 +302,9 @@ button {
   display: flex;
   align-items: center;
 }
-
+.d-none {
+  display: none;
+}
 .ps-relative {
   position: relative;
 }
